# bpew

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bpew.sln  bpew.vcxproj  bpew.vcxproj.filters  cmake_install.cmake
src/: main.cpp
src/core/: file_system.cpp  file_system.h  glm_extensions.h  id.h  input.cpp  input.h  log.h  platform.h  sha.h  time.cpp  time.h  tokenizer.cpp  tokenizer.h  utils.h  uuid.cpp  uuid.h  window.cpp  window.h
src/ecs/: components.h  entity.h  scene.cpp  scene.h  scene_serializer.cpp  scene_serializer.h
src/ecs/components/: camera_component.h  light_component.h  mesh_component.h  tag_component.h  transform_component.cpp  transform_component.h  uuid_component.h
src/editor/: draw_mode.h  editor.cpp  editor.h  editor_camera.cpp  editor_camera.h  editor_context.h  event_receiver.cpp  event_receiver.h  space_layout.cpp  space_layout.h  space_modeling.cpp  space_modeling.h  space_shading.cpp  space_shading.h  view3d_region.cpp  view3d_region.h
src/graphics/: batch.cpp  batch.h  camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  gizmos.cpp  gizmos.h  index_buffer.cpp  index_buffer.h  material.cpp  material.h  material_manager.cpp  material_manager.h  mesh.h  model.cpp  model.h  ping_pong_buffer.h  renderer.cpp  renderer.h  renderer_context.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_attribute.h  vertex_buffer.cpp  vertex_buffer.h
src/graphics/shaders/: .#shader_parser.cpp  material_shader_builder.cpp  material_shader_builder.h  shader.cpp  shader.h  shader_builder.cpp  shader_builder.h  shader_codegen.cpp  shader_codegen.h  shader_container.h  shader_create_info.h  shader_info.h  shader_parser.cpp  shader_parser.h
src/graphics/shaders/infos/: fxaa_shader_info.h  line_shader_info.h  material_shader_info.h  mesh_vertices_info.h  outline_selected_mesh_shader_info.h  outline_selected_vertex_shader_info.h  overlay_grid_shader_info.h  solid_shader_info.h  vertex_normals_info.h
src/nodes/: node.cpp  node.h  node_link.cpp  node_link.h  node_property.h
src/physics/: physics_utils.h
src/shaders/infos/: fxaa_shader.h  info_defines.h  line_shader.h  material_shader.h  outline_selected_mesh_shader.h  rendered_shader.h  shader_interface_info.h  solid_shader.h
